# DecisionTreeWriter

./: Iris_Classifier__96445394_7288_4946_bf9f_9ffe48004302.py  Iris_Classifier__de3224c8_b2ce_4d58_b932_fefd793abee6.py  LICENCE  README.md  example_code.py  example_data.py  example_use.py  setup.cfg  test.py
decision_tree_writer/: BaseDecisionTree.py  TreeWriter.py  __init__.py
decision_tree_writer/decision_tree_writer.egg-info/: PKG-INFO  SOURCES.txt
decision_tree_writer/decision_tree_writer_AndreBacic.egg-info/: PKG-INFO  SOURCES.txt
src/: TreeWriter.py  __init__.py
src/decision_tree_writer/: BaseDecisionTree.py  CorrelatedDataComparer.py  DataCleaner.py  TreeWriter.py  UncomparableDataSetItemsException.py  __init__.py
src/decision_tree_writer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
