[metadata]
name = decision-tree-writer
version = 0.4.2
author = Andre Bacic
author_email = andre9050@yahoo.com
description = Scaffolds out code for decision tree models that can learn to find relationships between the attributes of an object.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreBacic/DecisionTreeWriter
project_urls =
    Bug Tracker = https://github.com/AndreBacic/DecisionTreeWriter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src